add field date domain

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nest-product-api",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "API para certificados",
+  "author": "Giorgio Ventura",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
