--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.3",
+    "assert": "^2.0.0",
     "get-ssl-certificate": "^2.3.3",
     "mongoose": "^5.9.10",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.2.0"
