--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.3",
     "assert": "^2.0.0",
+    "axios": "^0.24.0",
     "get-ssl-certificate": "^2.3.3",
     "mongoose": "^5.9.10",
     "reflect-metadata": "^0.1.13",
